# Mesh2Volume

./: .gitignore  CMakeLists.txt  readme.md
conda-recipe/: meta.yaml
example/: grid_sample.py  module.py
python/: CMakeLists.txt  module.cpp  setup.py
src/: mesh2volume.cpp  vdb2mesh.cpp  vdb2vtk.cpp
tools/: CMakeLists.txt
