cmake_minimum_required(VERSION 3.15)
project(mesh2volume)
option(DEBUG_RELEASE_BUILD "Debug release build in VS" OFF)
if (MSVC AND DEBUG_RELEASE_BUILD)
    add_compile_options(/Z7)
    add_link_options(/INCREMENTAL:NO /DEBUG /OPT:REF /OPT:ICF)
endif()

if ($ENV{CONDA_PRFIX})
    if (WIN32)
        file(TO_CMAKE_PATH $ENV{CONDA_PRFIX}/Library/lib/cmake/OpenVDB OPENVDB_MODULE_PATH)
    else()
        file(TO_CMAKE_PATH $ENV{CONDA_PRFIX}/lib/cmake/OpenVDB OPENVDB_MODULE_PATH)
    endif()
else()
    if (WIN32)
        file(TO_CMAKE_PATH $ENV{LIBRARY_PREFIX}/lib/cmake/OpenVDB OPENVDB_MODULE_PATH)
    else()
        file(TO_CMAKE_PATH $ENV{PREFIX}/lib/cmake/OpenVDB OPENVDB_MODULE_PATH)
    endif()
endif()
message("OpenVDB Module Path:${OPENVDB_MODULE_PATH}")
list(APPEND CMAKE_MODULE_PATH ${OPENVDB_MODULE_PATH})

find_package(OpenVDB REQUIRED)
find_package(EIGEN3 REQUIRED eigen3)
include_directories( ${EIGEN3_INCLUDE_DIRS} )
find_package(pybind11 REQUIRED)

pybind11_add_module(mesh2volume MODULE module.cpp)
target_link_libraries(mesh2volume PRIVATE OpenVDB::openvdb)
target_link_libraries(mesh2volume PRIVATE TBB::tbb)
